SERVER-24753 Make the balancer thread initialization interruptible