src/mongo/s/balancer/balancer.cpp
@@ -38,7 +38,6 @@
 #include "mongo/bson/bsonobjbuilder.h"
 #include "mongo/bson/util/bson_extract.h"
 #include "mongo/client/read_preference.h"
-#include "mongo/client/remote_command_targeter.h"
 #include "mongo/db/client.h"
 #include "mongo/db/namespace_string.h"
 #include "mongo/db/operation_context.h"
@@ -46,7 +45,6 @@
 #include "mongo/s/balancer/balancer_chunk_selection_policy_impl.h"
 #include "mongo/s/balancer/balancer_configuration.h"
 #include "mongo/s/balancer/cluster_statistics_impl.h"
-#include "mongo/s/catalog/catalog_cache.h"
 #include "mongo/s/catalog/sharding_catalog_client.h"
 #include "mongo/s/catalog/type_chunk.h"
 #include "mongo/s/client/shard.h"
@@ -427,7 +425,7 @@ void Balancer::report(BSONObjBuilder* builder) {
 void Balancer::_mainThread() {
     Client::initThread("Balancer");
 
-    // TODO (SERVER-XXXXX): Balancer thread should only keep the operation context alive while it is
+    // TODO (SERVER-24754): Balancer thread should only keep the operation context alive while it is
     // doing balancing
     const auto txn = cc().makeOperationContext();
 
@@ -440,18 +438,9 @@ void Balancer::_mainThread() {
     // The balancer thread is holding the balancer during its entire lifetime
     boost::optional<DistLockManager::ScopedDistLock> scopedBalancerLock;
 
-    // Initialization
+    // Take the balancer distributed lock
     while (!_stopRequested() && !scopedBalancerLock) {
         auto shardingContext = Grid::get(txn.get());
-
-        // Init the balancer
-        if (!_init(txn.get())) {
-            log() << "Balancer will retry initialization in one minute";
-            sleepFor(kInitBackoffInterval);
-            continue;
-        }
-
-        // Take the balancer distributed lock
         auto scopedDistLock =
             shardingContext->catalogClient(txn.get())->getDistLockManager()->lockWithSessionID(
                 txn.get(),
@@ -463,7 +452,7 @@ void Balancer::_mainThread() {
             warning() << "Balancer distributed lock could not be acquired and will be retried in "
                          "one minute"
                       << causedBy(scopedDistLock.getStatus());
-            sleepFor(kInitBackoffInterval);
+            _sleepFor(txn.get(), kInitBackoffInterval);
             continue;
         }
 
@@ -474,8 +463,6 @@ void Balancer::_mainThread() {
     log() << "CSRS balancer started with instance id " << csrsBalancerLockSessionID;
 
     // Main balancer loop
-    Seconds balanceRoundInterval(kBalanceRoundDefaultInterval);
-
     while (!_stopRequested()) {
         auto shardingContext = Grid::get(txn.get());
         auto balancerConfig = shardingContext->getBalancerConfiguration();
@@ -488,22 +475,15 @@ void Balancer::_mainThread() {
             Status refreshStatus = balancerConfig->refreshAndCheck(txn.get());
             if (!refreshStatus.isOK()) {
                 warning() << "Skipping balancing round" << causedBy(refreshStatus);
-
-                // Tell scripts that the balancer is not active anymore
-                _endRound(txn.get(), balanceRoundInterval);
+                _endRound(txn.get(), kBalanceRoundDefaultInterval);
                 continue;
             }
 
-            // now make sure we should even be running
             if (!balancerConfig->isBalancerActive() || MONGO_FAIL_POINT(skipBalanceRound)) {
-                LOG(1) << "skipping balancing round because balancing is disabled";
-
-                // Tell scripts that the balancer is not active anymore
-                _endRound(txn.get(), balanceRoundInterval);
+                LOG(1) << "Skipping balancing round because balancing is disabled";
+                _endRound(txn.get(), kBalanceRoundDefaultInterval);
                 continue;
             }
-
-            uassert(13258, "oids broken after resetting!", _checkOIDs(txn.get()));
 
             {
                 LOG(1) << "*** start balancing round. "
@@ -543,9 +523,9 @@ void Balancer::_mainThread() {
                 LOG(1) << "*** End of balancing round";
             }
 
-            // Tell scripts that the balancer is not active anymore
             _endRound(txn.get(),
-                      _balancedLastTime ? kShortBalanceRoundInterval : balanceRoundInterval);
+                      _balancedLastTime ? kShortBalanceRoundInterval
+                                        : kBalanceRoundDefaultInterval);
         } catch (const std::exception& e) {
             log() << "caught exception while doing balance: " << e.what();
 
@@ -559,7 +539,7 @@ void Balancer::_mainThread() {
                 txn.get(), "balancer.round", "", roundDetails.toBSON());
 
             // Sleep a fair amount before retrying because of the error
-            _endRound(txn.get(), balanceRoundInterval);
+            _endRound(txn.get(), kBalanceRoundDefaultInterval);
         }
     }
 
@@ -572,40 +552,27 @@ bool Balancer::_stopRequested() {
 }
 
 void Balancer::_beginRound(OperationContext* txn) {
-    // Use fresh shard state and balancer settings
     Grid::get(txn)->shardRegistry()->reload(txn);
+    uassert(13258, "oids broken after resetting!", _checkOIDs(txn));
 
     stdx::unique_lock<stdx::mutex> lock(_mutex);
     _inBalancerRound = true;
 }
 
 void Balancer::_endRound(OperationContext* txn, Seconds waitTimeout) {
-    stdx::unique_lock<stdx::mutex> lock(_mutex);
-    _inBalancerRound = false;
-    _numBalancerRounds++;
-    _condVar.wait_for(lock, waitTimeout.toSystemDuration());
+    {
+        stdx::lock_guard<stdx::mutex> lock(_mutex);
+        _inBalancerRound = false;
+        _numBalancerRounds++;
+    }
+
+    _sleepFor(txn, waitTimeout);
 }
 
-bool Balancer::_init(OperationContext* txn) {
-    try {
-        // Contact the config server and refresh shard information. Checks that each shard is indeed
-        // a different process (no hostname mixup).
-        //
-        // These checks are redundant in that they're redone at every new round but we want to do
-        // them initially here so to catch any problem soon.
-        Grid::get(txn)->shardRegistry()->reload(txn);
-
-        if (!_checkOIDs(txn)) {
-            return false;
-        }
-
-        log() << "Config servers and shards contacted successfully";
-        return true;
-    } catch (const std::exception& e) {
-        warning() << "could not initialize balancer, please check that all shards and config "
-                     "servers are up: "
-                  << e.what();
-        return false;
+void Balancer::_sleepFor(OperationContext* txn, Seconds waitTimeout) {
+    stdx::unique_lock<stdx::mutex> lock(_mutex);
+    if (_state == kRunning) {
+        _condVar.wait_for(lock, waitTimeout.toSystemDuration());
     }
 }
 
@@ -619,6 +586,10 @@ bool Balancer::_checkOIDs(OperationContext* txn) {
     map<int, ShardId> oids;
 
     for (const ShardId& shardId : all) {
+        if (_stopRequested()) {
+            return false;
+        }
+
         const auto s = shardingContext->shardRegistry()->getShard(txn, shardId);
         if (!s) {
             continue;
